# wgpuEngineSample

./: .gitignore  CMakeLists.txt
logs/: Wed Apr 02 09_43_17 2025.md  Wed Apr 02 09_53_24 2025.md  Wed Apr 02 09_56_34 2025.md
src/: aabb.hpp  bvh.cpp  bvh.hpp  main.cpp  pdf.cpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp  scene_stats.cpp  scene_stats.hpp  scenes.cpp  scenes.hpp
src/core/: constants.hpp  core.cpp  core.hpp  framework.hpp  paths.hpp
src/engine/: raytracing_engine.cpp  raytracing_engine.hpp
src/graphics/: camera.cpp  camera.hpp  color.cpp  color.hpp  raytracing_renderer.cpp  raytracing_renderer.hpp  tone_mapper.cpp  tone_mapper.hpp
src/hittables/: box.cpp  box.hpp  bvh.cpp  bvh.hpp  constant_medium.cpp  constant_medium.hpp  hittable.cpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  mesh.cpp  mesh.hpp  quad.cpp  quad.hpp  sphere.cpp  sphere.hpp  surface.cpp  surface.hpp  triangle.cpp  triangle.hpp
src/materials/: material.cpp  material.hpp  texture.cpp  texture.hpp
src/math/: aabb.cpp  aabb.hpp  interval.cpp  interval.hpp  matrix.cpp  matrix.hpp  onb.cpp  onb.hpp  pdf.cpp  pdf.hpp  perlin.cpp  perlin.hpp  quaternion.cpp  quaternion.hpp  transform.cpp  transform.hpp  vec.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
src/utils/: chrono.cpp  chrono.hpp  entity_parser.cpp  entity_parser.hpp  hittable_transform.cpp  hittable_transform.hpp  image_reader.cpp  image_reader.hpp  image_writer.cpp  image_writer.hpp  interval.cpp  log_writer.cpp  log_writer.hpp  logger.cpp  logger.hpp  obj_loader.cpp  obj_loader.hpp  project_info.cpp  project_info.hpp  project_parsers.cpp  project_parsers.hpp  scene_stats.cpp  scene_stats.hpp  system_info.cpp  system_info.hpp  utilities.cpp  utilities.hpp
